Aula 254 - Scaffolding para criar view Index para Departments está falhando

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ gnore Visual Studio temporary files, build results, and
 x64/
 [Bb]in/
 [Oo]bj/
-
+*/[Oo]bj/[Dd]ebug/*
 # MSTest test Results
 [Tt]est[Rr]esult*/
 [Bb]uild[Ll]og.*
